# ffmpeg-video-player

tutorial01/: CMakeLists.txt  tutorial01-original.c  tutorial01a.c
tutorial02/: CMakeLists.txt
